Updated style, fixed some tables and headers + added nice toc instead of list of visible hyperlinks

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -37,7 +37,7 @@ h1.page-title {
   display: inline-block;
   padding: 16px 0;
   vertical-align: middle;
-  background: linear-gradient(135deg, #4f46e5 0%, #6366f1 100%);
+  background: linear-gradient(135deg, #075985 0%, #0369a1 100%);
   border-radius: 8px;
   color: #fff;
   text-align: center;
